--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,14 +10,18 @@
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}",
+                "-I/usr/local/include",
+                "-I/Applications/VulkanSDK/1.3.224.1/macOS/include",
+                "-I/opt/homebrew/include",
+                "-L/opt/homebrew/lib",
                 "-lglfw",
                 "-lvulkan",
                 "-ldl",
                 "-lpthread",
-                "-lX11", 
-                "-lXxf86vm", 
-                "-lXrandr", 
-                "-lXi"
+                //"-lX11", 
+                //"-lXxf86vm", 
+                //"-lXrandr", 
+                //"-lXi"
             ],
             "options": {
                 "cwd": "${fileDirname}"
