Got Vulkan to start, also added C++ 17 for emplace_back

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,8 @@
                 "-lvulkan",
                 "-ldl",
                 "-lpthread",
+                "-std=c++17", 
+                "-O2"
                 //"-lX11", 
                 //"-lXxf86vm", 
                 //"-lXrandr", 
